# dataAlign

bin2pcd/: readme.md  run2pcd.sh
ndt_omp/: CMakeLists.txt  README.md
ndt_omp/apps/: align.cpp
rgb2gray/: CMakeLists.txt  main.cpp  rgb2gray.kdev4
rgb2gray/.kdev4/: rgb2gray.kdev4
stereo/: .gitignore  CMakeLists.txt  kitti_main.cpp
stereo/include/: ImageManager.h  params.h
stereo/src/: ImageManager.cpp  OpticalSLAM.cpp  params.cpp
